deployment/infrastructure/ingress/app.ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend-ingress
  namespace: default
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: map-client
                port:
                  number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backend-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /control(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: com-control
                port:
                  number: 8080
          - path: /hive-mind(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: hive-mind-service
                port:
                  number: 80
